--- a/EmpregoInfo/EmpregoInfo/appsettings.json
+++ b/EmpregoInfo/EmpregoInfo/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConnectionDB": "Server=(localdb)\\mssqllocaldb;Database=EmpregoDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
